feat: restructure for readability and add refresh endpoint
